--- a/app/templates/injection.html
+++ b/app/templates/injection.html
@@ -7,6 +7,6 @@
 <body>
     <h1>Injection Page</h1>
     <!-- Exemple d'affichage des données transmises -->
-    <p>Les données sont transmises à : {{db_name}}</p>
+    <p>Les données ont été injéctées à : {{db_name}} en {{time}} secondes </p>
 </body>
 </html>
