--- a/app/templates/injection.html
+++ b/app/templates/injection.html
@@ -8,5 +8,6 @@
     <h1>Injection Page</h1>
     <!-- Exemple d'affichage des données transmises -->
     <p>Les données ont été injéctées à : {{db_name}} en {{time}} secondes </p>
+    <a href="{%url 'home'%}" class="btn btn-primary">Retour à l'accueil</a>
 </body>
 </html>
