--- a/app/templates/request1.html
+++ b/app/templates/request1.html
@@ -13,5 +13,6 @@
         {% endif %}
         <button type="submit">Suivant</button>
     </form>
+    <a href="{%url 'home'%}" class="btn btn-primary">Retour à l'accueil</a>
 </body>
 </html>
