--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -24,5 +24,6 @@
             {% endfor %}
         </tbody>
     </table>
+    <a href="{%url 'home'%}" class="btn btn-primary">Retour à l'accueil</a>
 </body>
 </html>
