--- a/app/templates/request3.html
+++ b/app/templates/request3.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>Requête 3 sur la base {{db_name}}</h1>
+    <a href="{%url 'home'%}" class="btn btn-primary">Retour à l'accueil</a>
     <form method="post">
         {% csrf_token %}
         {% if etape == 6 %}
@@ -13,6 +14,5 @@
         {% endif %}
         <button type="submit">Suivant</button>
     </form>
-    <a href="{%''%}" class="btn btn-primary">Retour à l'accueil</a>
 </body>
 </html>
