--- a/app/templates/generation_result.html
+++ b/app/templates/generation_result.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Injection Page</title>
+    <title>Generation Page</title>
 </head>
 <body>
-    <h1>Injection Page</h1>
+    <h1>Generation Page</h1>
     <a href="{%url 'home'%}" class="btn btn-primary">Retour à l'accueil</a>
     <!-- Exemple d'affichage des données transmises -->
-    <p>Les données ont été injectées en {{time}} secondes dans {{db_name}}</p>
+    <p>Les données ont été générées en {{time}} secondes </p>
 </body>
 </html>
